WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196290
[iOS WK2] Fixed elements in frames can be misplaced sometimes
https://bugs.webkit.org/show_bug.cgi?id=196290
Summary
[iOS WK2] Fixed elements in frames can be misplaced sometimes
Simon Fraser (smfr)
Reported
2019-03-26 22:34:01 PDT
[iOS WK2] Fixed elements in frames can be misplaced sometimes
Attachments
Patch
(14.66 KB, patch)
2019-03-26 22:37 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(14.59 KB, patch)
2019-03-26 23:24 PDT
,
Simon Fraser (smfr)
fred.wang
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-03-26 22:37:34 PDT
Created
attachment 366053
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-03-26 22:40:05 PDT
<
rdar://problem/49313998
>
Simon Fraser (smfr)
Comment 3
2019-03-26 23:24:06 PDT
Created
attachment 366055
[details]
Patch
Frédéric Wang (:fredw)
Comment 4
2019-03-27 01:56:37 PDT
Comment on
attachment 366055
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=366055&action=review
> LayoutTests/scrollingcoordinator/ios/fixed-in-frame-layer-reconcile-layer-position.html:54 > + }, 100);
What is that?
Antti Koivisto
Comment 5
2019-03-27 05:30:55 PDT
Comment on
attachment 366055
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=366055&action=review
> LayoutTests/scrollingcoordinator/ios/fixed-in-frame-layer-reconcile-layer-position.html:53 > + //document.getElementById('box').style.top = '20px'; > + <!-- document.body.style.backgroundColor = 'silver'; -->
Please don't land commented out code.
Simon Fraser (smfr)
Comment 6
2019-03-27 08:33:51 PDT
https://trac.webkit.org/changeset/243539/webkit
Simon Fraser (smfr)
Comment 7
2019-03-27 08:34:56 PDT
>
https://bugs.webkit.org/attachment.cgi?id=366055&action=review
> > > LayoutTests/scrollingcoordinator/ios/fixed-in-frame-layer-reconcile-layer-position.html:53 > > + //document.getElementById('box').style.top = '20px'; > > + <!-- document.body.style.backgroundColor = 'silver'; --> > > Please don't land commented out code.
Not even with two kinds of comments? :) Cleaned up before landing. I didn't need the JS in the iframe.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug